--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-# RannsakaAdventure
-
+<!DOCTYPE html>
 <html>
 <title>Rannsaka Adventure</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
