--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 <div class="w3-row">
 <div class="w3-half w3-container">
-  <h1><img src="Rannsaka Logo.png"></h1>
+  <h1><img src="https://s16.postimg.org/4zzz0vp91/Rannsaka_Logo.png"></h1>
 </div>
 
 <div class="w3-half w3-container w3-large w3-text-grey">
