--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div class="w3-container w3-section">
   <ul class="w3-navbar w3-card-2 ran-teal">
-    <li><a href="RanAdvMain.html">Home</a></li>
+    <li><a href="https://fatgod12.github.io/RannsakaAdventure/#">Home</a></li>
     <li><a href="AboutUs.html">About Us</a></li>
     <li class="w3-dropdown-hover">
       <a href="#">Products <i class="fa fa-caret-down"></i></a>
