--- a/index.html
+++ b/index.html
@@ -43,12 +43,19 @@
   <ul class="w3-navbar w3-card-2 ran-teal">
     <li><a href="https://fatgod12.github.io/RannsakaAdventure/#">Home</a></li>
     <li><a href="https://fatgod12.github.io/RannsakaAdventure/aboutus">About Us</a></li>
+    <li><a href="https://fatgod12.github.io/RannsakaAdventure/sales">Sales</a></li>
     <li class="w3-dropdown-hover">
       <a href="#">Products <i class="fa fa-caret-down"></i></a>
       <div class="w3-dropdown-content ran-teal w3-card-4">
-        <a href="#">Soap</a>
-        <a href="#">Energy  Belt</a>
-        <a href="#">Energy Drink</a>
+        <a href="https://fatgod12.github.io/RannsakaAdventure/Soap">All Natural Soap</a>
+        <a href="https://fatgod12.github.io/RannsakaAdventure/belt">Rechargeable Belt</a>
+        <a href="https://fatgod12.github.io/RannsakaAdventure/Protein">Protein Energy Drink</a>
+            </div>
+        <li class="w3-dropdown-hover">
+      <a href="#">People <i class="fa fa-caret-down"></i></a>
+      <div class="w3-dropdown-content ran-teal w3-card-4">
+        <a href="https://fatgod12.github.io/RannsakaAdventure/jim">Jim</a>
+        <a href="https://fatgod12.github.io/RannsakaAdventure/Danteh">Danteh</a>
       </div>
     </li>
   </ul>
@@ -59,11 +66,11 @@
 </div>
 
 <div class="w3-half w3-container w3-large w3-text-grey">
-  <p class="">Paragraph 1</p>
-  <p class="">Paragraph 2</p>
+  <p class="">Buy our brand new products featuring a rechargeable belt to soap that helps to protect your skin.</p>
+  <p class="">We will keep your skin great while you are healthy with your devices charged.</p>
 </div>
 <div class="w3-half w3-container w3-large w3-text-grey">
-  <p class="">Paragraph 3</p>
+  <p class="">Our goal at Ransaka Adventures is to help the consumers feel like they are strong and able to reach for the exercise dream, as well as help keep modern technology alive</p>
 
 </div>
 </div>
@@ -73,11 +80,11 @@
 New Thinking, New Adventure</h4>
 </div>
 <div class="w3-half w3-container w3-text-grey">
-<h4 class="">Paragraph 4</h4>
+<h4 class="">Contact us either of the ways below.</h4>
 </div>
 <div class="w3-row">
 <div class="w3-half w3-container">
-  <img src="example.png" style="width:50%">
+  <img src="https://s12.postimg.org/6bbv3mt8t/IMG_7634.jpg " style="width:50%">
 </div>
 <div class="w3-half w3-container w3-large w3-text-grey">
 </div>
