--- a/Danteh.html
+++ b/Danteh.html
@@ -74,7 +74,7 @@
 </div>
 <div class="w3-row">
 <div class="w3-half w3-container">
-  <h1><img src="Rannsaka Logo.png"></h1>
+  <h1><img src="https://s16.postimg.org/4zzz0vp91/Rannsaka_Logo.png"></h1>
 </div>
 </div>
 
@@ -93,7 +93,7 @@
   <tr>
     <td width="5%"></td>
     <td width="20%">
-      <img src="Danteh.jpg" style="width: 110%; height: 110%; object-fit: contain">
+      <img src="https://s15.postimg.org/txjsk5zdn/Danteh.jpg" style="width: 110%; height: 110%; object-fit: contain">
       <div style="w3-container"><h4><b>Danteh Trevino</b></h4></div>
       <div id="onlyforthis"><p><i>CFO</i></p></div>
       <hr>
