--- a/Soap.html
+++ b/Soap.html
@@ -75,11 +75,11 @@
 </div>
 
 <div class="w3-container w3-section w3-text-grey">
-<h4 class="">Soap</h4>
+<h4 class=""></h4>
 </div>
 <div class="w3-row">
 <div class="w3-half w3-container">
-  <img src="https://s12.postimg.org/5uqnh75hp/IMG_7632.jpg" style="width:50%">
+  <img src="https://s11.postimg.org/jdy0y4wkj/IMG_7625.jpg" style="width:50%">
 </div>
 <div class="w3-half w3-container w3-large w3-text-grey">
 </div>
